[package]
name = "scow-tonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
console-subscriber = "0.3"
futures = "0.3.30"
prost = "0.13"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.31"
thiserror = "1.0.63"
tokio = { version = "1.38", features = ["full", "tracing", "rt-multi-thread"] }
tonic = "0.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.12"
